--- a/EasySVGAnnotation/DESCRIPTION
+++ b/EasySVGAnnotation/DESCRIPTION
@@ -4,13 +4,13 @@ Title: Generates SVG plots from lattice xyplot / boxplot calls with
     tooltips generated based on variables available in the data.frame
     generating the call.
 Version: 0.1.0
-Date: 2012-07-18
+Date: 2013-02-01
 Author: Kevin Ushey
 Maintainer: Kevin Ushey <kevinushey@gmail.com>
 Depends:
     SVGAnnotation,
-    plyr,
-    lattice
+    lattice,
+    plyr
 Suggests:
     Kmisc,
     knitr
